# advent_ocaml_2023

./: .gitignore
day1/: day1.opam  dune-project
day2/: day2.opam  dune-project
day2/lib/: helpers.ml
day3/: day3.opam  dune-project
day3/lib/: collect_number.ml  collect_number.mli  dune  engine_elements.ml  engine_elements.mli  range.ml  range.mli
day4/: day4.opam  dune-project
day4/lib/: dune  parser.ml
