(lang dune 3.11)

(name day2)

(generate_opam_files true)

(source
 (github An-Tu/advent_ocaml_2023))

(authors "An-Tu")

(maintainers "An-Tu")

(package
 (name day2)
 (depends ocaml dune iter angstrom))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
